--- a/AndroidDrawerView/app/src/main/res/values/strings.xml
+++ b/AndroidDrawerView/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
 
     <string name="action_settings">Settings</string>
     <string name="klantenservice">KLANTENSERVICE</string>
+    <string name="button">Button</string>
 </resources>
